[tool.poetry]
name = "testando_gh_actions"
version = "0.1.0"
description = ""
authors = ["Gabriel Simonetto <gabrielfranksimonetto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.0"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
